--- a/CourseTracker.UI/Students/Views/Detail.cshtml
+++ b/CourseTracker.UI/Students/Views/Detail.cshtml
@@ -73,9 +73,10 @@
                     <tbody>
                         @foreach (SchoolYearsListItemModel schoolYear in schoolYears)
                         {
-                        <tr>
+                        <tr id="@schoolYear.Id">
                             <td>
                                 @Html.ActionLink("Details", "Detail", "SchoolYears", new { @syid = schoolYear.Id })
+                                <a class="confirmDelete ms-1" href="#modalContainer">Delete</a>
                             </td>
                             <td>
                                 @schoolYear.Index
@@ -95,5 +96,13 @@
         </div>
 
     </section>
+
+    <script type="text/javascript">
+
+        var deleteUri = "/SchoolYears/Delete";
+
+    </script>
+
+    <script src="~/js/confirmdelete.js"></script>
 
 }
